--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cmkazgygc02b3o41pxtm3rf4v"></script>
 </body>
 
 </html>
